syntax = "proto3";
package sro.accounts;
option go_package = "pkg/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "authorization.proto";
import "google/protobuf/wrappers.proto";

service AuthenticationService {
  rpc Register(RegisterAccountMessage) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/register"
      body: "*"
    };
  }

  rpc Login(LoginMessage) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  }

  rpc Refresh(google.protobuf.Empty) returns (AuthToken) {
    option (google.api.http) = {
      post: "/v1/refresh"
      body: "*"
    };
  }

  rpc ForgotUsername(ForgotUsernameMessage) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/forgot_username"
      body: "*"
    };
  }

  rpc ForgotPassword(ForgotPasswordMessage) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/forgot_password"
      body: "*"
    };
  }

  rpc ResetPassword(RestPasswordMessage) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/reset_password"
      body: "*"
    };
  }
}

message LoginMessage {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  string created_at = 7;
  repeated UserRole roles = 8;
  google.protobuf.StringValue bannedAt = 9;
}

message RegisterAccountMessage {
  string email = 1;
  string password = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
}

message ForgotUsernameMessage {
  string email = 1;
}

message ForgotPasswordMessage {
  string username = 1;
}

message RestPasswordMessage {
  string username = 1;
  string password = 2;
  string token = 3;
}

message AuthToken {
  string token = 1;
}